// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package hashicorp.consul.mesh.v2beta1;

import "pbmesh/v2beta1/proxy_configuration.proto";
import "pbresource/v1/annotations.proto";

message ComputedProxyConfiguration {
  option (hashicorp.consul.resource.v1.spec) = {scope: SCOPE_NAMESPACE};

  // dynamic_config is the configuration that could be changed
  // dynamically (i.e. without needing restart).
  DynamicConfig dynamic_config = 2;

  // bootstrap_config is the configuration that requires proxies
  // to be restarted to be applied.
  BootstrapConfig bootstrap_config = 3;
}
